# BOAT

./: .gitignore  README.md  boat.dockerfile
examples/bo_naive/: CMakeLists.txt  Makefile  bo_naive_opti.cpp
examples/branin_hoo/: Makefile  branin_hoo.cpp
examples/gc_paper/: Makefile  gc.cpp
include/: boat.hpp
src/: CMakeLists.txt
src/optimization/: CMakeLists.txt  nlopt_interface.hpp  nlopt_interface_t.hpp  numerical_optimization.hpp  optimization.cpp  optimization.hpp  optimization_t.hpp
src/parameters/: CMakeLists.txt  parameters.cpp  parameters.hpp  parameters_t.hpp
src/probabilistic/: CMakeLists.txt  gp.cpp  gp.hpp  gp_t.hpp  probabilistic.cpp  probabilistic.hpp  probabilistic_t.hpp
src/utilities/: useful_macros.hpp  utilities.hpp
